@@ -1,4 +1,4 @@
-+++++++++++
+﻿+++++++++++
 Python News
 +++++++++++
 
@@ -9,6 +9,7 @@ Release date: XXX
 
 Core and Builtins
 -----------------
+
 - Issue #22631: Added Linux-specific socket constant CAN_RAW_FD_FRAMES.
   Patch courtesy of Joe Jevnik.
 
@@ -30,6 +31,10 @@ Core and Builtins
 
 Library
 -------
+
+- Issue #21217: inspect.getsourcelines() now tries to compute the start and
+  end lines from the code object, fixing an issue when a lambda function is
+  used as decorator argument.  Patch by Thomas Ballinger.
 
 - Issue #23811: Add missing newline to the PyCompileError error message.
   Patch by Alex Shkop.
